[package]
name = "lsp-proxy"
version = "0.1.1"
edition = "2024"
authors = ["Mikhail Siarko <mikhail.siarko@gmail.com>"]
description = "A lightweight Language Server Protocol (LSP) proxy server implemented in Rust."
repository = "https://github.com/MikhailSiarko/lsp-proxy"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
async-trait = "0.1"
